--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
               <div class="uk-container">
                 <nav class=uk-navbar uk-navbar={&quot;align&quot;:&quot;left&quot;,&quot;boundary&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar&quot;:true,&quot;dropbar-anchor&quot;:&quot;!.uk-navbar-container&quot;,&quot;dropbar-mode&quot;:&quot;push&quot;}>
                   <div class=uk-navbar-left>
-              <a class="uk-navbar-item uk-logo" href=""> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
+                    <a class="uk-navbar-item uk-logo" href=""> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
                   </div>
                   <div class=uk-navbar-right>
                     <ul class=uk-navbar-nav>
@@ -68,7 +68,7 @@
             </div>
           </div>
         </div>
-        
+
         <!--End of navigation -->
         <!-- Header image -->
         <div class="uk-section-default uk-section-overlap uk-position-relative uk-light" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-fade&quot;,&quot;delay&quot;:200} tm-header-transparent=light tm-header-transparent-placeholder>
@@ -83,13 +83,13 @@
                       Wooden Floors <br />
                       Varnishing
                       <br /><br />
-                  </h1> 
-                  <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-xlarge" uk-scrollspy-class=uk-animation-slide-left-small>
-                    <div class="uk-flex-middle uk-child-width-auto uk-grid-medium" uk-grid>
-                      <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large header-button uk-box-shadow-small" href="#contact" uk-scroll offset="-15" duration="800"> Get a Quote</a> </div>
-                      <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href="#offer" uk-scroll offset="-15" duration="800" > Offer</a> </div>
+                    </h1> 
+                    <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-xlarge" uk-scrollspy-class=uk-animation-slide-left-small>
+                      <div class="uk-flex-middle uk-child-width-auto uk-grid-medium" uk-grid>
+                        <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large header-button uk-box-shadow-small" href="#contact" uk-scroll offset="-15" duration="800"> Get a Quote</a> </div>
+                        <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href="#offer" uk-scroll offset="-15" duration="800" > Offer</a> </div>
+                      </div>
                     </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -111,11 +111,19 @@
             <div class="uk-width-expand@m uk-grid-item-match">
               <div class="uk-tile-default uk-tile uk-grid-item-match uk-flex-middle">
                 <div class=uk-panel>
-                  <h1 class="uk-width-large uk-h1" uk-scrollspy-class><h1>AP Invest - malarz Poznań, budowanie domów, usługi remontowe</h1></h1>
+                  <h1 class="uk-width-large uk-h1" uk-scrollspy-class><h1>Dave Painting and Decorating</h1></h1>
                   <div class=uk-margin uk-scrollspy-class>
-                    <p>Oferujemy <strong><em>usługi budowlane, usługi remontowe, malowanie mieszkań</em></strong> i domów już od 15 lat. Większą cześć naszych realizacji wykonaliśmy na terenie Wielkiej Brytanii. Wychodząc naprzeciw wymaganiom nasza firma świadczy wysokiej jakości usługi również na terenie Poznania i okolic.
-                    <br />Świadczymy profesjonalne usługi między innymi: <em><strong>malowanie wnętrz Poznań, budowa domów, prace malarskie&nbsp;</strong></em>niezależnie od wielkości pomieszczeń. Pomagamy w doborze odpowiednich rozwiązań kolorystycznych i estetycznych oraz technik pracy w taki sposób, by zadowolić oczekiwania nawet najbardziej wymagającego klienta.
-                    <br />Nasz zespół zawsze wykonuje powierzoną pracę starannie i z największą dbałością o szczegóły. Przed rozpoczęciem każdej pracy sami zajmujemy się zabezpieczeniem pomieszczeń, w celu uniknięcia niepotrzebnych zabrudzeń, a po zakończonej pracy pozostawiamy czyste wnętrze i miłe wrażenie. Serdecznie zapraszamy do skorzystania z naszych usług. Jak <strong><em>malarz Poznań</em></strong> to tylko AP Invest.</p>
+                    <p>Offer <strong><em>interior and exterior decorating services or renovation services.</em></strong></br>
+For over 15 years Dave Paninting and Decorating contractors specialised in interior and exterior decorating services 
+for both domestic and commercial clients. With the skills, experience, and equipment we can handle any type of painting project.
+Our professional decorating firm operating mainly in Co. Dublin where we have completed a larger part of our projects.<br />
+Our services include:.... 
+<br />
+We help in the selection of appropriate color and aesthetic solutions to satisfy the expectations of even the most demanding customers.
+Free consultation and detailed quotes in writing will be provided prior to every contract.
+
+
+Free consultation and detailed quotes in writing will be provided prior to every contract.
                     <p>&nbsp;</p>
                   </div>
                   <div class="uk-margin uk-text-center" uk-scrollspy-class> 
@@ -223,17 +231,7 @@
           <div class=uk-container>
             <div class="uk-container uk-margin-xlarge">
               <div class=uk-grid-large uk-grid>
-                <div class="uk-width-xlarge@m uk-grid-item-match uk-flex-middle">
-                  <div class=uk-panel>
-                    <h2 class="uk-text-center@s uk-text-center uk-h1" uk-scrollspy-class> Piotr Trajdos </h2>
-                    <div class="uk-margin uk-text-center@s uk-text-center uk-text-lead" uk-scrollspy-class>
-                      <p>Ul. Brzozowa 21, 62-002 Jelonek.</p>
-                    </div>
-                    <div class="uk-margin uk-text-center@s uk-text-center uk-text-lead" uk-scrollspy-class>
-                      <p>+48 739 202 440</p>
-                    </div>
-                  </div>
-                </div>
+
                 <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
                   <div class=uk-panel>
                     <form>
@@ -252,7 +250,17 @@
                     </form>
                   </div>
                 </div>
-
+                <div class="uk-width-xlarge@m uk-grid-item-match uk-flex-middle">
+                  <div class=uk-panel>
+                    <h2 class="uk-text-center@s uk-h1" uk-scrollspy-class> Piotr Trajdos </h2>
+                    <div class="uk-margin uk-text-center@s uk-text-lead" uk-scrollspy-class>
+                      <p>Ul. Brzozowa 21, 62-002 Jelonek.</p>
+                    </div>
+                    <div class="uk-margin uk-text-center@s uk-text-lead" uk-scrollspy-class>
+                      <p>+48 739 202 440</p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
