SCROLL TO TOP Animation has been added to scroll to top link. Link shows up and dissapear on scroll.

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.4/js/uikit-icons.min.js"></script>
     <script src="js/optimized.js"></script>
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/optimized.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>PaintingAndDecorating</title>
@@ -267,7 +268,7 @@ Free consultation and detailed quotes in writing will be provided prior to every
         </div>
         <!-- End of the contact section -->
         <!-- Footer -->
-        <a href="body" class="totop" uk-scroll>
+        <a href="body" id="totop-link" class="totop" uk-scroll>
           <img class="totop" src="/images/to-top.svg" alt="">
         </a>
         <div class="tm-footer uk-section-secondary uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-left-small&quot;,&quot;delay&quot;:false}>
