SCROLL TO TOP BTN Animation has been added to scroll to top button.

--- a/app/index.html
+++ b/app/index.html
@@ -269,7 +269,7 @@ Free consultation and detailed quotes in writing will be provided prior to every
         <!-- End of the contact section -->
         <!-- Footer -->
         <a href="body" id="totop-link" class="totop" uk-scroll>
-          <img class="totop" src="/images/to-top.svg" alt="">
+          <img class="totop-img" src="/images/to-top.svg" alt="">
         </a>
         <div class="tm-footer uk-section-secondary uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-left-small&quot;,&quot;delay&quot;:false}>
           <div class=uk-container>
