SIDE IMGAE In section about me picture has been added

--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
               <div class=uk-panel>
                 <div class=uk-margin uk-scrollspy-class>
                   <a href="" class=el-link>
-                    <img src="images/side.png" class="el-image uk-border-rounded" alt="malarz Poznań, malowanie Poznań" uk-img>
+                    <img src="images/side.png" class="el-image side-image" alt="malarz Poznań, malowanie Poznań" uk-img>
                   </a>
                 </div>
               </div>
@@ -117,15 +117,11 @@
                     <p>Offer <strong><em>interior and exterior decorating services or renovation services.</em></strong></br>
 For over 15 years Dave Paninting and Decorating contractors specialised in interior and exterior decorating services 
 for both domestic and commercial clients. With the skills, experience, and equipment we can handle any type of painting project.
-Our professional decorating firm operating mainly in Co. Dublin where we have completed a larger part of our projects.<br />
-Our services include:.... 
+Our professional decorating firm operating mainly in Co. Dublin where we have completed a larger part of our projects.
+Our services include: interior and exterior painitn, wallpapering, carpentry, office painting, maintenance painting, woodwork and fascias, kitchen renovation.
 <br />
 We help in the selection of appropriate color and aesthetic solutions to satisfy the expectations of even the most demanding customers.
-Free consultation and detailed quotes in writing will be provided prior to every contract.
-
-
-Free consultation and detailed quotes in writing will be provided prior to every contract.
-                    <p>&nbsp;</p>
+Free consultation and detailed quotes in writing will be provided prior to every contract.</p>
                   </div>
                   <div class="uk-margin uk-text-center" uk-scrollspy-class> 
                     <a class="el-content uk-button uk-button-danger" href="#contact" uk-scroll offset="-15" duration="800">Get a quote</a> 
