OFFERS SECTION Copy added to section offeres

--- a/app/index.html
+++ b/app/index.html
@@ -36,9 +36,9 @@
                   <div class=uk-panel id=module-0>
                     <ul class="uk-nav uk-nav-default">
                       <li><a href="#firma" uk-scroll offset="-150" duration="800">About me</a></li>
-                      <li><a href="#offer" uk-scroll offset="-15" duration="800">Offer</a></li>
+                      <li><a href="#services" uk-scroll offset="-15" duration="800">Offer</a></li>
                       <li><a href="#testimonials" uk-scroll offset="0" duration="800">Testimonials</a></li>
-                      <li><a href="#offer" uk-scroll offset="-15" duration="800">Gallery</a></li>
+                      <li><a href="#gallery" uk-scroll offset="-15" duration="800">Gallery</a></li>
                       <li><a href="#contact" uk-scroll offset="0" duration="800">Contact</a></li>
                     </ul>
                   </div>
@@ -58,9 +58,9 @@
                   <div class=uk-navbar-right>
                     <ul class=uk-navbar-nav>
                       <li><a href="#firma" uk-scroll offset="-50" duration="800">About me</a></li>
-                      <li><a href="#offer" uk-scroll offset="-15" duration="800">Offer</a></li>
+                      <li><a href="#services" uk-scroll offset="-15" duration="800">Offer</a></li>
                       <li><a href="#testimonials" uk-scroll offset="0" duration="800">Testimonials</a></li>
-                      <li><a href="#offer" uk-scroll offset="-15" duration="800">Gallery</a></li>
+                      <li><a href="#gallery" uk-scroll offset="-15" duration="800">Gallery</a></li>
                       <li><a href="#contact" uk-scroll offset="0" duration="800">Contact</a></li>
                     </ul>
                   </div>
@@ -74,7 +74,7 @@
         <!-- Header image -->
         <div class="uk-section-default uk-section-overlap uk-position-relative uk-light" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-fade&quot;,&quot;delay&quot;:200} tm-header-transparent=light tm-header-transparent-placeholder>
           <!-- <div class="bottom-curve"></div> -->
-          <div class="section-background-img uk-background-norepeat uk-background-cover uk-background-center-center uk-background-fixed uk-section uk-section-large">
+          <div class="section-background-img uk-background-norepeat uk-background-cover uk-background-center-center uk-background-fixed uk-section uk-section-large header-background-image">
             <div class="uk-container uk-position-relative">
               <div class="uk-margin-remove-top uk-margin-remove-bottom uk-grid-margin uk-margin-remove-top uk-margin-remove-bottom" uk-grid>
                 <div class=uk-width-1-1@m>
@@ -115,13 +115,13 @@
                   <h1 class="uk-width-large uk-h1" uk-scrollspy-class><h1>Dave Painting and Decorating</h1></h1>
                   <div class=uk-margin uk-scrollspy-class>
                     <p>Offer <strong><em>interior and exterior decorating services or renovation services.</em></strong></br>
-For over 15 years Dave Paninting and Decorating contractors specialised in interior and exterior decorating services 
-for both domestic and commercial clients. With the skills, experience, and equipment we can handle any type of painting project.
-Our professional decorating firm operating mainly in Co. Dublin where we have completed a larger part of our projects.
-Our services include: interior and exterior painitn, wallpapering, carpentry, office painting, maintenance painting, woodwork and fascias, kitchen renovation.
-<br />
-We help in the selection of appropriate color and aesthetic solutions to satisfy the expectations of even the most demanding customers.
-Free consultation and detailed quotes in writing will be provided prior to every contract.</p>
+                      For over 15 years Dave Paninting and Decorating contractors specialised in interior and exterior decorating services 
+                      for both domestic and commercial clients. With the skills, experience, and equipment we can handle any type of painting project.
+                      Our professional decorating firm operating mainly in Co. Dublin where we have completed a larger part of our projects.
+                      Our services include: interior and exterior painitn, wallpapering, carpentry, office painting, maintenance painting, woodwork and fascias, kitchen renovation.
+                      <br />
+                      We help in the selection of appropriate color and aesthetic solutions to satisfy the expectations of even the most demanding customers.
+                      Free consultation and detailed quotes in writing will be provided prior to every contract.</p>
                   </div>
                   <div class="uk-margin uk-text-center" uk-scrollspy-class> 
                     <a class="el-content uk-button uk-button-danger" href="#contact" uk-scroll offset="-15" duration="800">Get a quote</a> 
@@ -131,14 +131,18 @@ Free consultation and detailed quotes in writing will be provided prior to every
             </div>
           </div>
         </div>
-        <div id="testimonials" class="uk-section-secondary uk-section uk-section-large" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
+        <div id="services" class="uk-section-secondary uk-section uk-section-small" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
           <div class=uk-container>
             <div class=uk-grid-margin uk-grid>
               <div class=uk-width-1-1@s>
-                <h2 class=uk-text-center uk-scrollspy-class><p>Zakres Usług:</p></h2>
+                <h2 class=uk-text-center uk-scrollspy-class><p>Our Services</p></h2>
                 <blockquote uk-scrollspy-class>
-                  <p>malarz Poznań, <a title="budowa domu" href=/budowa-domow>budowa domu</a>, prowadzenie budowy, dom pod klucz, gładzie ścian, usługi remontowe, malowanie mieszkania, malowanie ścian, malowanie ścian i sufitów, szpachlowanie ścian i sufitów, wykończenia wnętrz, usługi malarskie Poznań, malowanie wnętrz Poznań, szpachlowanie sufitu, malowanie mieszkania Poznań, malowanie sufitu, malowanie pokoju, malowanie mieszkania, Poznań malowanie ścian, <a title="malowanie natryskowe" href=/malowanie-natryskowe>malowanie natryskowe</a>, malarze pokojowi Poznań, malowanie ścian natryskowo, remont, remont mieszkania,</p>
+                  <p class="uk-text-center uk-text-large">Painting & Decorating, Wallpaer Hanging, Kitchen Refurbishment, Plastering, Commmertial Painting & Deocorating,
+                  Wood Staining and Varninshing, Minor Plaster Rapair, Water Damage Repair, Furniture Painting and Restoriation, Floor Sanding & Varnishing.
+                  </p>
                 </blockquote>
+              </div>
+              <div id="testimonials" class="uk-width-1-1@s">
                 <h2 class=uk-text-center uk-scrollspy-class><p>Zakres Działania</p></h2>
                 <blockquote uk-scrollspy-class>
                   <p>Poznań, Swarzędz, Kobylnica, Gruszczyn, Luboń, Komorniki, Puszczykowo, Czapury, Głuszyna, Rogalinek, Paczkowo, Zalasewo, Borówiec, Kamionki, Babki, Szczytniki, Wiry, Plewiska, Mosina, Dopiewo, Dopiewiec, Plewiska, Skórzewo, Zakrzewo, Dąbrowa, Wysogotowo, Przeźmierowo, Baranowo, Chyby, Kiekrz, Złotniki, Jelonek, Suchy Las, Koziegłowy, Czerwonak, Bolechowo, Bolechowo-Osiedle, Promnice, Murowana Goślina.</p>
@@ -147,13 +151,18 @@ Free consultation and detailed quotes in writing will be provided prior to every
             </div>
           </div>
         </div>
+        <div id="services-call-to-action" class="uk-section-secondary uk-section uk-section-small" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
+          <div class=uk-container>
+            <h2 class=uk-text-center><p>Call 0876248777 to make an appointment</p></h2>
+          </div>
+        </div>
         <!-- End of summary section -->
         <!-- Offer section -->
-        <div id="offer" class="uk-section-default uk-section uk-section-large">
+        <div id="gallery" class="uk-section-default uk-section uk-section-large">
           <div class="uk-container">
             <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid="">
               <div class="uk-width-1-1@m uk-first-column">
-                <h1><p>Zakres Usług</p></h1>
+                <h1><p>Gallery</p></h1>
                 <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider uk-grid uk-flex-top uk-flex-wrap-top uk-grid-stack" uk-grid="masonry: true;parallax: 310" uk-lightbox="toggle: a[data-type]" style="padding-bottom: 310px;">
                   <div class="uk-first-column" style="transform: translateY(3.08062px);">
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
