SERVICES CALL TO ACTION

--- a/app/index.html
+++ b/app/index.html
@@ -152,8 +152,8 @@
           </div>
         </div>
         <div id="services-call-to-action" class="uk-section-secondary uk-section uk-section-small" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
-          <div class=uk-container>
-            <h2 class=uk-text-center><p>Call 0876248777 to make an appointment</p></h2>
+          <div class="uk-container uk-box-shadow-large uk-padding">
+            <h2 class="uk-text-center"><span uk-icon="icon: receiver; ratio: 2"></span>&nbsp;Call 0876248777 to make an appointment</h2>
           </div>
         </div>
         <!-- End of summary section -->
