--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,7 @@
                     <div class="uk-margin uk-margin-remove-top uk-margin-remove-bottom uk-width-xlarge" uk-scrollspy-class=uk-animation-slide-left-small>
                       <div class="uk-flex-middle uk-child-width-auto uk-grid-medium" uk-grid>
                         <div class=el-item> <a class="el-content uk-button uk-button-danger uk-button-large header-button uk-box-shadow-small" href="#contact" uk-scroll offset="-15" duration="800"> Get a Quote</a> </div>
-                        <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href="#offer" uk-scroll offset="-15" duration="800" > Offer</a> </div>
+                        <div class=el-item> <a class="el-content uk-button uk-button-text uk-button-large" href="#services" uk-scroll offset="-15" duration="800" > Offer</a> </div>
                       </div>
                     </div>
                 </div>
@@ -205,8 +205,8 @@
           <div class="uk-container">
             <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid="">
               <div class="uk-width-1-1@m uk-first-column">
-                <h1><p>Gallery</p></h1>
-                <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider uk-grid uk-flex-top uk-flex-wrap-top uk-grid-stack" uk-grid="masonry: true;parallax: 310" uk-lightbox="toggle: a[data-type]" style="padding-bottom: 310px;">
+                <h2><p>Gallery</p></h2>
+                <div class="uk-margin uk-text-center uk-child-width-1-1 uk-child-width-1-3@m uk-grid-divider uk-grid uk-flex-top uk-flex-wrap-top uk-grid-stack" uk-grid="masonry: true;parallax: 300" uk-lightbox="toggle: a[data-type]" style="padding-bottom: 310px;">
                   <div class="uk-first-column" style="transform: translateY(3.08062px);">
                     <div class="el-item uk-inline-clip uk-transition-toggle uk-light" tabindex="0"> 
                       <img class="uk-transition-scale-up uk-transition-opaque el-image" alt="usługi remontowe" uk-img="" src="images/one.jpeg">
@@ -276,16 +276,15 @@
         </div>
         <!-- End of gallery section -->
         <!-- Contact section -->
-        <div id="contact" class="uk-section-default uk-section uk-section-large" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
+        <div id="contact" class="uk-section-default uk-section uk-section-small" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-bottom-medium&quot;,&quot;delay&quot;:200}>
           <div class=uk-container>
             <div class="uk-container uk-margin-xlarge">
+              <h2><p>Contact us</p></h2>
               <div class=uk-grid-large uk-grid>
-
                 <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
                   <div class=uk-panel>
                     <form>
                       <fieldset class="uk-fieldset">
-                        <legend class="uk-legend">Contact Form</legend>
                         <div class="uk-margin">
                           <input class="uk-input" type="text" placeholder="Fullname">
                         </div>
@@ -295,6 +294,9 @@
                         <div class="uk-margin">
                           <textarea class="uk-textarea" rows="9" placeholder="Your message"></textarea>
                         </div>
+                  <div class="uk-margin uk-text-center" uk-scrollspy-class> 
+                    <a class="el-content uk-button uk-button-danger" href="#" >Send</a> 
+                  </div>
                       </fieldset>
                     </form>
                   </div>
