FOOTER Three columns with lists has been added to footers.

--- a/app/index.html
+++ b/app/index.html
@@ -111,13 +111,13 @@
             <div class="uk-width-expand@m uk-grid-item-match">
               <div class="uk-tile-default uk-tile uk-grid-item-match uk-flex-middle">
                 <div class=uk-panel>
-                  <h1 class="uk-width-large uk-h1" uk-scrollspy-class><h1>Dave Painting and Decorating</h1></h1>
+                  <h1 class="uk-width-large uk-h1" uk-scrollspy-class><h1>Dave's Painting and Decorating</h1></h1>
                   <div class=uk-margin uk-scrollspy-class>
                     <p>Offer <strong><em>interior and exterior decorating services or renovation services.</em></strong></br>
-                      For over 15 years Dave Paninting and Decorating contractors specialised in interior and exterior decorating services 
+                      For over 15 years Dave's Painting and Decorating contractors specialised in interior and exterior decorating services 
                       for both domestic and commercial clients. With the skills, experience, and equipment we can handle any type of painting project.
                       Our professional decorating firm operating mainly in Co. Dublin where we have completed a larger part of our projects.
-                      Our services include: interior and exterior painitn, wallpapering, carpentry, office painting, maintenance painting, woodwork and fascias, kitchen renovation.
+                      Our services include: interior and exterior painitng, wallpapering, carpentry, office painting, maintenance painting, woodwork and fascias, kitchen renovation.
                       <br />
                       We help in the selection of appropriate color and aesthetic solutions to satisfy the expectations of even the most demanding customers.
                       Free consultation and detailed quotes in writing will be provided prior to every contract.</p>
@@ -294,9 +294,9 @@
                         <div class="uk-margin">
                           <textarea class="uk-textarea" rows="9" placeholder="Your message"></textarea>
                         </div>
-                  <div class="uk-margin uk-text-center" uk-scrollspy-class> 
-                    <a class="el-content uk-button uk-button-danger" href="#" >Send</a> 
-                  </div>
+                        <div class="uk-margin uk-text-center" uk-scrollspy-class> 
+                          <a class="el-content uk-button uk-button-danger" href="#" >Send</a> 
+                        </div>
                       </fieldset>
                     </form>
                   </div>
@@ -321,35 +321,62 @@
         <a href="body" id="totop-link" class="totop" uk-scroll>
           <img class="totop-img" src="/images/to-top.png" alt="">
         </a>
-        <div class="tm-footer uk-section-secondary uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-left-small&quot;,&quot;delay&quot;:false}>
+        <div id="footer" class="tm-footer uk-section-secondary uk-section" uk-scrollspy={&quot;target&quot;:&quot;[uk-scrollspy-class]&quot;,&quot;cls&quot;:&quot;uk-animation-slide-left-small&quot;,&quot;delay&quot;:false}>
           <div class=uk-container>
-            <div class=uk-grid-margin uk-grid>
-              <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
-                <div class=uk-panel> </div>
+            <div class="uk-grid-large uk-child-width-expand@s uk-text-center" uk-grid>
+              <div class="uk-text-left">
+                <p class="uk-text-lead">Dave Paininting & Decorating</p>
+                <ul class="uk-list">
+                  <li><a href="#firma" uk-scroll offset="-150" duration="800"><span uk-icon="icon: triangle-right"></span> About me</a></li>
+                  <li><a href="#services" uk-scroll offset="-15" duration="800"><span uk-icon="icon: triangle-right"></span>Offer</a></li>
+                  <li><a href="#testimonials" uk-scroll offset="0" duration="800"><span uk-icon="icon: triangle-right"></span>Testimonials</a></li>
+                  <li><a href="#gallery" uk-scroll offset="-15" duration="800"><span uk-icon="icon: triangle-right"></span>Gallery</a></li>
+                  <li><a href="#contact" uk-scroll offset="0" duration="800"><span uk-icon="icon: triangle-right"></span>Contact</a></li>
+                </ul>
               </div>
-              <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
-                <div class=uk-panel>
-                  <div class=uk-text-center uk-scrollspy-class=uk-animation-slide-bottom-small>
-                    <ul class="uk-subnav uk-margin-remove-bottom uk-flex-center" uk-margin>
-                      <li class=el-item> <a class=el-link href=# uk-scroll>Polityka Prywatności</a> </li>
-                      <li class=el-item> <a class=el-link href="">Oferta</a> </li>
-                      <li class=el-item> <a class=el-link href="">Kontakt</a> </li>
-                    </ul>
-                  </div>
-                </div>
+              <div class="uk-text-left">
+                <a class="uk-logo" href=""> <img src="images/logo.png" alt="PAINTING AND DECORATING"> </a>
               </div>
-              <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle">
-                <div class=uk-panel>
-                  <div class="uk-margin uk-text-right@m uk-text-center" uk-scrollspy-class=uk-animation-slide-right-small>
-                    <div class="uk-child-width-auto uk-grid-large uk-flex-right@m uk-flex-center" uk-grid>
-                      <div>
-                        <a uk-icon="icon: facebook;ratio: 2" href=https://www.facebook.com/apinvestpiotrtrajdos/ class="el-link uk-icon-link"></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              <div class="uk-text-left">
+                <p class="uk-text-lead">Wroking Hours</p>
+                <ul class="office-hours uk-list uk-list-divider">
+                  <li> <span>Monday</span> <span class="uk-align-right">8:00am - 5:00pm</span> </li>
+                  <li> <span>Tuesday</span> <span class="uk-align-right">8:00am - 5:00pm</span> </li>
+                  <li> <span>Wednesday</span> <span class="uk-align-right">8:00am - 5:00pm</span> </li>
+                  <li> <span>Thursday</span> <span class="uk-align-right">8:00am - 5:00pm</span> </li>
+                  <li> <span>Friaday</span> <span class="uk-align-right">8:00am - 5:00pm</span> </li>
+                  <li> <span>Saturday</span> <span class="uk-align-right">8:00am - 1:00pm</span> </li>
+                  <li> <span>Sunday</span> <span class="uk-align-right">closed</span> </li>
+                </ul>
               </div>
             </div>
+            <!-- <div class=uk-grid-margin uk-grid> -->
+            <!--   <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle"> -->
+            <!--     <div class=uk-panel> </div> -->
+            <!--   </div> -->
+            <!--   <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle"> -->
+            <!--     <div class=uk-panel> -->
+            <!--       <div class=uk-text-center uk-scrollspy-class=uk-animation-slide-bottom-small> -->
+            <!--         <ul class="uk-subnav uk-margin-remove-bottom uk-flex-center" uk-margin> -->
+            <!--           <li class=el-item> <a class=el-link href=# uk-scroll>Polityka Prywatności</a> </li> -->
+            <!--           <li class=el-item> <a class=el-link href="">Oferta</a> </li> -->
+            <!--           <li class=el-item> <a class=el-link href="">Kontakt</a> </li> -->
+            <!--         </ul> -->
+            <!--       </div> -->
+            <!--     </div> -->
+            <!--   </div> -->
+            <!--   <div class="uk-width-expand@m uk-grid-item-match uk-flex-middle"> -->
+            <!--     <div class=uk-panel> -->
+            <!--       <div class="uk-margin uk-text-right@m uk-text-center" uk-scrollspy-class=uk-animation-slide-right-small> -->
+            <!--         <div class="uk-child-width-auto uk-grid-large uk-flex-right@m uk-flex-center" uk-grid> -->
+            <!--           <div> -->
+            <!--             <a uk-icon="icon: facebook;ratio: 2" href=https://www.facebook.com/apinvestpiotrtrajdos/ class="el-link uk-icon-link"></a> -->
+            <!--           </div> -->
+            <!--         </div> -->
+            <!--       </div> -->
+            <!--     </div> -->
+            <!--   </div> -->
+            <!-- </div> -->
           </div>
         </div>
         <!-- End of footer -->
